--- a/[POO - Manhã][Temporada 2][Aula 1][Melrick e Kemylly]/estilos.css
+++ b/[POO - Manhã][Temporada 2][Aula 1][Melrick e Kemylly]/estilos.css
@@ -23,3 +23,11 @@
 .cabecalho .logoifal{
    height: 140px;
 }
+
+.conteudo{
+    background-color: #eaeaea;
+}
+
+.conteudo .foto{
+    width: 120px;
+}
